fixed create btn overflow

--- a/src/App.css
+++ b/src/App.css
@@ -287,7 +287,7 @@ ul {
   font-size: large;
   font-weight: 600;
   white-space: nowrap;
-  height: fit-content;
+ 
   width: fit-content;
 }
 
